# neurax

./: .replit  README.md  analyzer.py  app.py  clone_and_analyze.py  clone_with_token.py  download_neurax.py  download_with_progress.py  main.py  optimization_report.md  pyproject.toml  quantum_gravity_export_20250513_033851.xlsx  rapport_optimisations_implementations_neurax.md  rapport_resultats_arc_complet.md  resultats_tests_comparaison.md  tests_comparison.md
vorax_repo/: .replit  README.md  analyze_notebook.py  apply_corrections.py  clone_kaggle_api.py  config.py  documentation.md  documentation.py  enhance_notebook.py  enhanced_test_kaggle.py  fix_arc_notebook.py  fix_arc_notebook_complete.py  fix_arc_notebook_comprehensive.py  fix_arc_notebook_final.py  fix_arc_notebook_final_optimized.py  fix_arc_notebook_final_v2.py  fix_arc_notebook_final_v3.py  fix_arc_notebook_paths.py  fix_arc_notebook_with_training.py  fix_minimal_arc_notebook.py  generate_report.py  main.py  pattern_detector.py  pyproject.toml  quick_kaggle_test.py  setup_kaggle_api.py  submission.json  test_arc_api.py  test_kaggle_api.py  transformations.py  update_notebook.py  utils.py
vorax_repo/arc_notebook/: hybridvoraxmodelv2-arc-prize-2025.ipynb
vorax_repo/arc_test/: arc_api_report.json  arc_api_report.txt
vorax_repo/attached_assets/: Pasted-4-1s-1-0-00s-Debugger-warning-It-seems-that-frozen-modules-are-being-used-which-may-4-1s-2-0-00s-1744769962772.txt  Pasted-4-5s-1-0-00s-Debugger-warning-It-seems-that-frozen-modules-are-being-used-which-may-4-5s-2-0-00s-1744765600968.txt  kaggle 4.json  (+1 more)
(+76 files in other folders)
