[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "h5py>=3.13.0",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
]
